welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: '(' expected but identifier found.
if estSurMessage {
   ^BDRBuggle:9: error: illegal start of simple expression
	}
        ^