welcome.lessons.welcome.bdr.BDR.scala.code
var fini = true

if estSurMessage {
	litMessage()
}
